# sr-visualization

./: .bzrignore  .gitignore  .travis.yml  README.md  aws.yml  changelog.tex  jenkins.yml  repository.rosinstall  shippable.yml  stack.xml
sr_data_visualization/: CMakeLists.txt  package.xml  readme.md  setup.py  sr_data_visualizer_plugin.xml
sr_data_visualization/config/: data_visualiser_motor_stat_keys.yaml  data_visualiser_parameters.yaml  data_visualiser_parameters_lh.yaml  data_visualiser_parameters_rh.yaml  data_visualiser_parameters_rh_lite.yaml
sr_data_visualization/launch/: benchmarking.launch  benchmarks_visualizer.launch  data_visualizer.launch  data_visualizer_and_model.launch  data_visualizer_new.launch  data_visualizer_testing.launch  robot.launch
sr_data_visualization/scenes/: scene_ground.scene  scene_ground_with_boxes.scene  scene_table.scene  scene_table_with_objects.scene  scene_table_with_tote.scene  scene_table_with_two_totes.scene
sr_data_visualization/scripts/: sr_data_visualizer_plugin
sr_data_visualization/scripts/sr_data_visualization/: MORE_TESTING.py  MORE_TESTING2.py  MORE_TESTING3.py  circular_testing.py  create_data_visualizer.py  data_plot.py  data_tab.py  download_testing_bag.py  dynamic_callback_testing.py  dynamic_callback_testing2.py  dynamic_callback_testing3.py  example.yaml  example_old.yaml  first_try.py  joint_graph_widget.py  motor_stat_keys.yaml  qt_rostopic_plot.py  single_plot_testing.py  sr_data_visualizer.py  sr_data_visualizer_gui.py  sr_data_visualizer_gui_new.py  sr_data_visualizer_gui_v2.py  sr_moveit_planner_benchmarking_gui.py  sr_moveit_planner_convert_to_db.py  tab_options.py  tes65.py  test.py  test2.py  test3.py  test4.py  test5.py  testing.py  trial_plots.py
sr_data_visualization/src/sr_data_visualization/: data_plot.py  data_tab.py  joint_graph_widget.py  sr_data_visualizer_gui.py  tab_options.py
sr_data_visualization/uis/: e_visualizer_test.ui  e_visualizer_test_2.ui  hand-e_visualizer.ui  hand-e_visualizer_2.ui  hand-e_visualizer_3.ui  handescene.rviz  handescene_model.rviz  handescene_tftree.rviz  moveit_planner_benchmarking.ui
sr_fingertip_visualization/: CMakeLists.txt  package.xml  readme.md  setup.py  sr_fingertip_plugin_gui.xml
sr_fingertip_visualization/config/: tactile_point_cooridinates.yaml
sr_fingertip_visualization/launch/: tactile_visualizer.launch
sr_fingertip_visualization/scripts/: sr_fingertip_plugin_gui
sr_fingertip_visualization/src/sr_fingertip_visualization/: finger_widgets_graphs.py  finger_widgets_visual.py  generic_plots.py  sr_fingertip_visualization_gui.py  tab_layouts_generic.py  tab_layouts_graph.py  tab_layouts_visual.py  tactile_point_generic.py  tactile_points.py
sr_graph/: CMakeLists.txt  Makefile  mainpage.dox  manifest.xml
sr_graph/scripts/: move_ui_headers.sh
sr_graph/src/: data_collector.cpp  glwidget.cpp  main.cpp  sensor_scope.cpp
sr_graph/ui/: sr_graph.ui  test.ui
sr_gui_biotac/: CMakeLists.txt  package.xml  package.xml~  plugin.xml  sample_data.bag  setup.py
sr_gui_biotac/uis/: SrGuiBiotac.ui
sr_gui_change_controllers/: CHANGELOG.rst  CMakeLists.txt  manifest.xml  package.xml  setup.py  sr_change_controllers_plugin.xml
sr_gui_change_controllers/uis/: SrChangeControllers.ui
sr_gui_change_muscle_controllers/: CHANGELOG.rst  CMakeLists.txt  manifest.xml  package.xml  setup.py  sr_change_controllers_plugin.xml
sr_gui_change_muscle_controllers/uis/: SrChangeControllers.ui
sr_gui_controller_tuner/: CHANGELOG.rst  CMakeLists.txt  manifest.xml  package.xml  setup.py  sr_controller_tuner_plugin.xml
sr_gui_controller_tuner/data/: controller_settings.xml
sr_gui_controller_tuner/uis/: SrGuiControllerTuner.ui
sr_gui_dynamic_plot_tool/: CMakeLists.txt  README.md  package.xml  plugin.xml  setup.py  sr_dynamic_plot_tool_plugin.xml
sr_gui_dynamic_plot_tool/scripts/: base_configuration.py
sr_gui_dynamic_plot_tool/uis/: SrGuiDynamicPlotTool.ui
sr_gui_dynamic_plot_tool/xml_configurations/: New_configuration.xml  empty_configuration.xml
sr_gui_fingertip_visualization/: CMakeLists.txt  package.xml  setup.py  sr_gui_biotac_plugin.xml  sr_gui_fingertip_plugin.xml
sr_gui_fingertip_visualization/scripts/: sr_gui_fingertip_plugin
sr_gui_grasp_controller/: CHANGELOG.rst  CMakeLists.txt  mainpage.dox  manifest.xml  package.xml  setup.py  sr_grasp_controller_plugin.xml
sr_gui_grasp_controller/ui/: SrGuiGraspController.ui
sr_gui_hand_calibration/: CHANGELOG.rst  CMakeLists.txt  manifest.xml  package.xml  setup.py  sr_gui_hand_calibration_plugin.xml
sr_gui_joint_slider/: CHANGELOG.rst  CMakeLists.txt  mainpage.dox  manifest.xml  package.xml  setup.py  sr_joint_slider_plugin.xml
sr_gui_joint_slider/model/: slide_joints.xml
sr_gui_joint_slider/uis/: SelectionSlider.ui  Slider.ui  SrJointSlider.ui
sr_gui_motor_resetter/: CHANGELOG.rst  CMakeLists.txt  manifest.xml  package.xml  setup.py  sr_motor_resetter_plugin.xml
sr_gui_motor_resetter/uis/: SrGuiMotorResetter.ui
sr_gui_movement_recorder/: CHANGELOG.rst  CMakeLists.txt  mainpage.dox  manifest.xml  package.xml  setup.py  sr_gui_movement_recorder_plugin.xml
sr_gui_muscle_driver_bootloader/: CHANGELOG.rst  CMakeLists.txt  manifest.xml  package.xml  setup.py  sr_bootloader.xml  sr_gui_muscle_driver_bootloader_plugin.xml
sr_gui_muscle_driver_bootloader/uis/: SrBootloader.ui
sr_gui_self_test/: CHANGELOG.rst  CMakeLists.txt  manifest.xml  package.xml  setup.py  sr_self_test_plugin.xml
sr_gui_self_test/uis/: SrSelfTest.ui  self_test.ui  test_plot.ui
sr_gui_teach_mode/: CMakeLists.txt  package.xml  setup.py  sr_teach_mode_plugin.xml
sr_health_check/: CMakeLists.txt  README.md  package.xml  setup.py  sr_health_check_plugin.xml  test.ui
sr_health_check/test/: test_sr_health_check_gui.py  test_sr_health_check_gui.test
sr_health_check/uis/: SrHealthCheck.ui
sr_icons/: CMakeLists.txt  package.xml
sr_visualization/: CHANGELOG.rst  CMakeLists.txt  beans.sh  changelog.tex  default_calibration  package.xml
sr_visualization_icons/: CHANGELOG.rst  CMakeLists.txt  mainpage.dox  package.xml
(+256 files in other folders)
