<?xml version="1.0"?>
<!--
 Copyright 2022 Shadow Robot Company Ltd.
 This program is free software: you can redistribute it and/or modify it
 under the terms of the GNU General Public License as published by the Free
 Software Foundation version 2 of the License.
 This program is distributed in the hope that it will be useful, but WITHOUT
 ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or
 FITNESS FOR A PARTICULAR PURPOSE. See the GNU General Public License for
 more details.
 You should have received a copy of the GNU General Public License along
 with this program. If not, see <http://www.gnu.org/licenses/>.
-->

<package>
  <name>sr_data_visualization</name>
  <version>0.0.1</version>
  <description>
    A package to show all the data coming from the dexterous hand.
  </description>
  <author email="georgia@shadowrobot.com">Georgia Blanco-Litchfield</author>
  <maintainer email="software@shadowrobot.com">Shadow Robot's software team</maintainer>

  <license>GPL</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>rqt_gui</build_depend>
  <build_depend>rqt_gui_py</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sr_robot_msgs</build_depend>

  <run_depend>rospy</run_depend>
  <run_depend>rqt_gui</run_depend>
  <run_depend>rqt_gui_py</run_depend>  
  <run_depend>std_msgs</run_depend>
  <run_depend>sr_robot_msgs</run_depend>
  <run_depend version_gte="0.2.19">python_qt_binding</run_depend>
  <run_depend>qwt_dependency</run_depend>
  <run_depend>python3-qwt</run_depend>

 <export>
    <rqt_gui plugin="${prefix}/sr_data_visualizer_plugin.xml"/>
  </export>

</package>

