<?xml version="1.0"?>
<package>
  <name>sr_gui_biotac</name>
  <version>0.0.0</version>
  <description>The sr_gui_biotac package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="hand@todo.todo">hand</maintainer>

  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>message_runtime</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>rqt_gui</build_depend>
  <build_depend>rqt_gui_py</build_depend>
  <build_depend>sr_vizualization_icons</build_depend>

  <run_depend>message_runtime</run_depend>
  <run_depend>message_generation</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>rqt_gui</run_depend>
  <run_depend>rqt_gui_py</run_depend>
  <run_depend>sr_vizualization_icons</run_depend>

  <export>
    <rqt_gui plugin="${prefix}/sr_gui_biotac_plugin.xml"/>
  </export>
</package>