<?xml version="1.0"?>
<package>
  <name>sr_gui_biotac</name>
  <version>0.0.0</version>
  <description>The sr_gui_biotac package</description>

  <maintainer email="software@shadowrobot.com">Shadow Software Team</maintainer>
  <author email="dg@shadowrobot.com">Dan Greenwald</author>

  <license>GPL</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>rqt_gui</build_depend>
  <build_depend>rqt_gui_py</build_depend>
  <build_depend>sr_vizualization_icons</build_depend>
  <build_depend>sr_robot_msgs</build_depend>
  <build_depend>std_msgs</build_depend>

  <run_depend>rospy</run_depend>
  <run_depend>rqt_gui</run_depend>
  <run_depend>rqt_gui_py</run_depend>
  <run_depend>sr_vizualization_icons</run_depend>
  <run_depend>sr_robot_msgs</run_depend>
  <run_depend>std_msgs</run_depend>

  <export>
    <rqt_gui plugin="${prefix}/sr_gui_biotac_plugin.xml"/>
  </export>
</package>
