<package>
  <name>sr_gui_change_controllers</name>
  <version>1.2.0</version>
  <description>sr_gui_change_controllers is a rosgui plugin for loading the different controllers.</description>
  <maintainer email="software@shadowrobot.com">Ugo Cupcic </maintainer>

  <license>GPL</license>

  <url type="website">http://ros.org/wiki/sr_gui_controller_tuner</url>

  <author email="software@shadowrobot.com">Ugo Cupcic </author>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->
  <build_depend>rospy</build_depend>
  <build_depend>rqt_gui</build_depend>
  <build_depend>rqt_gui_py</build_depend>
  <build_depend>pr2_mechanism_msgs</build_depend>
  <build_depend>sr_robot_msgs</build_depend>

  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>rospy</run_depend>
  <run_depend>rqt_gui</run_depend>
  <run_depend>rqt_gui_py</run_depend>
  <run_depend>pr2_mechanism_msgs</run_depend>
  <run_depend>sr_robot_msgs</run_depend>

<export>
    <rqt_gui plugin="${prefix}/sr_change_controllers_plugin.xml"/>
</export>

</package>