<package>
  <name>sr_gui_controller_tuner</name>
  <version>1.2.0</version>
  <description>sr_gui_controller_tuner is a rosgui plugin for tuning the sr_mechanism_controllers</description>
  <maintainer email="software@shadowrobot.com">Shadow Robot's software team</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/sr_gui_controller_tuner</url>
  <url type="repository">https://github.com/shadow-robot/sr-visualization</url>
  <url type="bugtracker">https://github.com/shadow-robot/sr-visualization/issues</url>

  <author email="software@shadowrobot.com">Ugo Cupcic </author>

  
  <buildtool_depend>catkin</buildtool_depend>

  
  <build_depend>rospy</build_depend>
  <build_depend>rqt_gui</build_depend>
  <build_depend>rqt_gui_py</build_depend>
  <build_depend>sr_robot_msgs</build_depend>
  <build_depend>pr2_mechanism_msgs</build_depend>
  
  
  <run_depend>rospy</run_depend>
  <run_depend>rqt_gui</run_depend>
  <run_depend>rqt_gui_py</run_depend>
  <run_depend>sr_robot_msgs</run_depend>
  <run_depend>pr2_mechanism_msgs</run_depend>

<export>
    <rqt_gui plugin="${prefix}/sr_controller_tuner_plugin.xml" />
</export>

</package>