<?xml version="1.0"?>
<package format="2">
  <name>sr_gui_dynamic_plot_tool</name>
  <version>0.0.0</version>
  <description>The sr_gui_dynamic_plot_tool package</description>
  <maintainer email="software@shadowrobot.com">user</maintainer>
  <license>Private</license>
  <author email="giuseppe@shadowrobot.com">Giuseppe Barbieri</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>rqt_gui</build_depend>
  <build_depend>rqt_gui_py</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>rqt_gui</build_export_depend>
  <build_export_depend>rqt_gui_py</build_export_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>rqt_gui</exec_depend>
  <exec_depend>rqt_gui_py</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <rqt_gui plugin="${prefix}/plugin.xml"/>
  </export>
</package>
