<package>
  <name>sr_gui_grasp_controller</name>
  <version>1.2.0</version>
  <description>sr_gui_grasp_controller - gui plugin for interpolating between grasps.</description>
  <maintainer email="software@shadowrobot.com">Shadow Robot's software team</maintainer>

  <license>GPL</license>

  <url type="website">http://ros.org/wiki/sr_gui_grasp_controller</url>
  <url type="repository">https://github.com/shadow-robot/sr-visualization</url>
  <url type="bugtracker">https://github.com/shadow-robot/sr-visualization/issues</url>

  <author email="software@shadowrobot.com">Ugo Cupcic </author>

  
  <buildtool_depend>catkin</buildtool_depend>

  
  <build_depend>rospy</build_depend>
  <build_depend>rqt_gui</build_depend>
  <build_depend>rqt_gui_py</build_depend>
  <build_depend>sr_hand</build_depend>

  
  <run_depend>rospy</run_depend>
  <run_depend>rqt_gui</run_depend>
  <run_depend>rqt_gui_py</run_depend>
  <run_depend>sr_hand</run_depend>

<export>
    <rqt_gui plugin="${prefix}/sr_grasp_controller_plugin.xml" />
</export>

</package>