<package>
  <name>sr_gui_joint_slider</name>
  <version>1.2.0</version>
  <description>sr_gui_joint_slider is a rosgui plugin to change the position of the different joints.</description>
  <maintainer email="software@shadowrobot.com">Ugo Cupcic </maintainer>

  <license>GPL</license>

  <url type="website">http://ros.org/wiki/sr_gui_joint_slider</url>

  <author email="software@shadowrobot.com">Ugo Cupcic </author>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->
  <build_depend>rospy</build_depend>
  <build_depend>rqt_gui</build_depend>
  <build_depend>rqt_gui_py</build_depend>
  <build_depend>pr2_mechanism_msgs</build_depend>
  <build_depend>sr_robot_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sr_robot_lib</build_depend>
  <build_depend>sr_hand</build_depend>

  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>rospy</run_depend>
  <run_depend>rqt_gui</run_depend>
  <run_depend>rqt_gui_py</run_depend>
  <run_depend>pr2_mechanism_msgs</run_depend>
  <run_depend>sr_robot_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>sr_robot_lib</run_depend>
  <run_depend>sr_hand</run_depend>

<export>
    <rqt_gui plugin="${prefix}/sr_joint_slider_plugin.xml"/>
</export>

</package>