<package>
  <name>sr_gui_joint_slider</name>
  <version>1.3.0</version>
  <description>A GUI plugin for changing the position of the different joints.</description>
  <maintainer email="software@shadowrobot.com">Shadow Robot's software team</maintainer>

  <license>GPL</license>

  <url type="website">http://ros.org/wiki/sr_gui_joint_slider</url>
  <url type="repository">https://github.com/shadow-robot/sr-visualization</url>
  <url type="bugtracker">https://github.com/shadow-robot/sr-visualization/issues</url>

  <author email="software@shadowrobot.com">Ugo Cupcic </author>

  
  <buildtool_depend>catkin</buildtool_depend>
  
  
  <build_depend>rospy</build_depend>
  <build_depend>rqt_gui</build_depend>
  <build_depend>rqt_gui_py</build_depend>
  <build_depend>pr2_mechanism_msgs</build_depend>
  <build_depend>sr_robot_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sr_robot_lib</build_depend>
  <build_depend>sr_hand</build_depend>
  <build_depend>sr_visualization_icons</build_depend>
  
  <run_depend>rospy</run_depend>
  <run_depend>rqt_gui</run_depend>
  <run_depend>rqt_gui_py</run_depend>
  <run_depend>pr2_mechanism_msgs</run_depend>
  <run_depend>sr_robot_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>sr_robot_lib</run_depend>
  <run_depend>sr_hand</run_depend>
  <run_depend>sr_visualization_icons</run_depend>

<export>
    <rqt_gui plugin="${prefix}/sr_joint_slider_plugin.xml" />
</export>

</package>