<package>
  <name>sr_gui_movement_recorder</name>
  <version>1.2.0</version>
  <description>This is a rosgui plugin for recording and replaying movements.</description>
  <maintainer email="software@shadowrobot.com">Shadow Robot's software team</maintainer>

  <license>GPL</license>

  <url type="website">http://ros.org/wiki/sr_gui_movement_recorder</url>
  <url type="repository">https://github.com/shadow-robot/sr-visualization</url>
  <url type="bugtracker">https://github.com/shadow-robot/sr-visualization/issues</url>

  <author email="software@shadowrobot.com">Ugo Cupcic</author>

  
  <buildtool_depend>catkin</buildtool_depend>
  
  
  <build_depend>rospy</build_depend>
  <build_depend>rqt_gui</build_depend>
  <build_depend>rqt_gui_py</build_depend>
  <build_depend>sr_hand</build_depend>
  <build_depend>pr2_mechanism_msgs</build_depend>

  
  <run_depend>rospy</run_depend>
  <run_depend>rqt_gui</run_depend>
  <run_depend>rqt_gui_py</run_depend>
  <run_depend>sr_hand</run_depend>
  <run_depend>pr2_mechanism_msgs</run_depend>

<export>
    <rqt_gui plugin="${prefix}/sr_gui_movement_recorder_plugin.xml" />
</export>

</package>