<package>
  <name>sr_gui_muscle_driver_bootloader</name>
  <version>1.3.0</version>
  <description>A GUI plugin for bootloading the muscle drivers on the etherCAT muscle shadow hand.</description>
  <maintainer email="software@shadowrobot.com">Shadow Robot's software team</maintainer>
  
  <license>GPL</license>
  
  <url type="website">http://ros.org/wiki/sr_gui_muscle_driver_bootloader</url>
  <url type="repository">https://github.com/shadow-robot/sr-visualization</url>
  <url type="bugtracker">https://github.com/shadow-robot/sr-visualization/issues</url>

  <author email="software@shadowrobot.com">Ugo Cupcic</author>

  
  <buildtool_depend>catkin</buildtool_depend>
  
  
  <build_depend>rospy</build_depend>
  <build_depend>rqt_gui</build_depend>
  <build_depend>rqt_gui_py</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>diagnostic_msgs</build_depend>
  <build_depend>sr_robot_msgs</build_depend>  

  
  <run_depend>rospy</run_depend>
  <run_depend>rqt_gui</run_depend>
  <run_depend>rqt_gui_py</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>std_srvs</run_depend>
  <run_depend>diagnostic_msgs</run_depend>
  <run_depend>sr_robot_msgs</run_depend>

  <export>
    <rqt_gui plugin="${prefix}/sr_gui_muscle_driver_bootloader_plugin.xml" />
  </export>
</package>