<package>
  <name>sr_health_check</name>
  <version>0.0.1</version>
  <description>A GUI plugin for bootloading the motors on the shadow etherCAT hand.</description>
  <maintainer email="software@shadowrobot.com">Shadow Robot's software team</maintainer>

  <license>GPL</license>

  <author email="software@shadowrobot.com">Maximilian Zieba</author>
  <buildtool_depend>catkin</buildtool_depend>

  
  <build_depend>rospy</build_depend>
  <build_depend>rqt_gui</build_depend>
  <build_depend>rqt_gui_py</build_depend>
  
  
  <run_depend>rospy</run_depend>
  <run_depend>rqt_gui</run_depend>
  <run_depend>rqt_gui_py</run_depend>
<export>
    <rqt_gui plugin="${prefix}/sr_health_check_plugin.xml" />
</export>

</package>