<package>
  <name>sr_icons</name>
  <version>1.2.0</version>
  <description>Contains icons used by all guis in sr_visualization.</description>
  <maintainer email="software@shadowrobot.com">Shadow Robot's software team</maintainer>

  <license>GPL</license>

  <author email="software@shadowrobot.com">Ugo Cupcic</author>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

</package>